; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dst/extr_dcore.c_dst_node_set_size.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dst/extr_dcore.c_dst_node_set_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dst_node = type { i32, i32 }
%struct.block_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dst_node*)* @dst_node_set_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dst_node_set_size(%struct.dst_node* %0) #0 {
  %2 = alloca %struct.dst_node*, align 8
  %3 = alloca %struct.block_device*, align 8
  store %struct.dst_node* %0, %struct.dst_node** %2, align 8
  %4 = load %struct.dst_node*, %struct.dst_node** %2, align 8
  %5 = getelementptr inbounds %struct.dst_node, %struct.dst_node* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.dst_node*, %struct.dst_node** %2, align 8
  %8 = getelementptr inbounds %struct.dst_node, %struct.dst_node* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = ashr i32 %9, 9
  %11 = call i32 @set_capacity(i32 %6, i32 %10)
  %12 = load %struct.dst_node*, %struct.dst_node** %2, align 8
  %13 = getelementptr inbounds %struct.dst_node, %struct.dst_node* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call %struct.block_device* @bdget_disk(i32 %14, i32 0)
  store %struct.block_device* %15, %struct.block_device** %3, align 8
  %16 = load %struct.block_device*, %struct.block_device** %3, align 8
  %17 = icmp ne %struct.block_device* %16, null
  br i1 %17, label %18, label %38

18:                                               ; preds = %1
  %19 = load %struct.block_device*, %struct.block_device** %3, align 8
  %20 = getelementptr inbounds %struct.block_device, %struct.block_device* %19, i32 0, i32 0
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = call i32 @mutex_lock(i32* %22)
  %24 = load %struct.block_device*, %struct.block_device** %3, align 8
  %25 = getelementptr inbounds %struct.block_device, %struct.block_device* %24, i32 0, i32 0
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = load %struct.dst_node*, %struct.dst_node** %2, align 8
  %28 = getelementptr inbounds %struct.dst_node, %struct.dst_node* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @i_size_write(%struct.TYPE_2__* %26, i32 %29)
  %31 = load %struct.block_device*, %struct.block_device** %3, align 8
  %32 = getelementptr inbounds %struct.block_device, %struct.block_device* %31, i32 0, i32 0
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = call i32 @mutex_unlock(i32* %34)
  %36 = load %struct.block_device*, %struct.block_device** %3, align 8
  %37 = call i32 @bdput(%struct.block_device* %36)
  br label %38

38:                                               ; preds = %18, %1
  ret void
}

declare dso_local i32 @set_capacity(i32, i32) #1

declare dso_local %struct.block_device* @bdget_disk(i32, i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @i_size_write(%struct.TYPE_2__*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @bdput(%struct.block_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
